Set default images, fixed team name, limited text amount in user card, minor alignment fix in profile page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -322,7 +322,10 @@ label.cabinet input.file {
 }
 
 .user-about {
-
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 210px;
 }
 
 .skillset {
